[gd_scene load_steps=12 format=3 uid="uid://cnpxeohkk1cc"]

[ext_resource type="Script" uid="uid://cs5hreuj4f1h0" path="res://scripts/gameplay.gd" id="1_ct7aa"]
[ext_resource type="PackedScene" uid="uid://hmtjjdfsi6rp" path="res://scenes/sheet.tscn" id="1_l1v76"]
[ext_resource type="Curve" uid="uid://6aw8kocya1g" path="res://materials/indicator_color_curve.tres" id="2_4bh5q"]
[ext_resource type="Script" uid="uid://c8rainoecpyie" path="res://addons/lines_and_trails_3d/line_3d.gd" id="3_din8e"]
[ext_resource type="PackedScene" uid="uid://8n1e4e5tpjm3" path="res://scenes/pause_menu.tscn" id="3_ocj2s"]
[ext_resource type="Script" uid="uid://b8gkn2ed6qcag" path="res://scripts/third_person_camera.gd" id="4_ocj2s"]
[ext_resource type="PackedScene" uid="uid://b2fg5nt83iujg" path="res://scenes/scoreboard.tscn" id="5_din8e"]

[sub_resource type="Curve" id="Curve_din8e"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_l1v76"]

[sub_resource type="Sky" id="Sky_tbgi4"]
sky_material = SubResource("ProceduralSkyMaterial_l1v76")

[sub_resource type="Environment" id="Environment_ct7aa"]
background_mode = 2
sky = SubResource("Sky_tbgi4")
ambient_light_source = 3

[node name="Gameplay" type="Node3D"]
script = ExtResource("1_ct7aa")
indicator_color_curve = ExtResource("2_4bh5q")

[node name="Sheet" parent="." instance=ExtResource("1_l1v76")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16.5178)

[node name="Stones" type="Node" parent="."]

[node name="ImpulseIndicator" type="MeshInstance3D" parent="."]
script = ExtResource("3_din8e")
width = 0.5
width_curve = SubResource("Curve_din8e")
points = PackedVector3Array(0, 0, 0, 0, 0, 0)
metadata/_custom_type_script = "uid://c8rainoecpyie"

[node name="ThirdPersonCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2, 29)
script = ExtResource("4_ocj2s")
offset = Vector3(0, 2, 1)
lookat_voffset = 0.5

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.433013, -0.25, 0, 0.5, 0.866025, 0.5, -0.75, 0.433012, 0, 5, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ct7aa")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 256.0
grow_horizontal = 0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="TopDownCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)

[node name="Scoreboard" parent="." instance=ExtResource("5_din8e")]

[node name="PauseMenu" parent="." instance=ExtResource("3_ocj2s")]
visible = false

[connection signal="out_of_bounds" from="Sheet" to="." method="_on_sheet_out_of_bounds"]
